--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -7,6 +7,13 @@
 }
 .banner-section-2 {
   /* height: 100vh; */
+  background-image: url("/img/banner 2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.banner-section-3 {
+  /* height: 100vh; */
   background-image: url("/img/banner 3.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -20,6 +27,32 @@
   left: 0;
   right: 0;
   opacity: 0.7;
+}
+
+.swiper-button-next, .swiper-button-prev{
+  background: #1F2332 !important;
+  color: white !important;
+  width:  40px !important;
+  height: 40px !important;
+  border-radius: 100%;
+  transition: all 0.3s ease;
+  border: 1px solid black;
+  font-weight: bold !important;
+  draggable : true ;
+}
+
+.swiper-button-next:hover, .swiper-button-prev:hover{
+  background: white !important;
+  color:black !important;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+  font-family: swiper-icons;
+  font-size: unset !important;
+  text-transform: none !important;
+  letter-spacing: 0;
+  font-variant: initial;
+  line-height: 1;
 }
 
 
