added top category section

--- a/src/components/for home page/top brands/style.css
+++ b/src/components/for home page/top brands/style.css
@@ -1,5 +1,5 @@
 .top-category-1{
-  background-image: url("https://themewagon.github.io/hexashop/assets/images/men-03.jpg");
+  background-image: url("https://meds-theme.myshopify.com/cdn/shop/files/abo-01.jpg?v=1628687766&width=1500");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -7,7 +7,7 @@
   min-height: 450px;
 }
 .top-category-2{
-  background-image: url("https://themewagon.github.io/hexashop/assets/images/women-03.jpg");
+  background-image: url("https://meds-theme.myshopify.com/cdn/shop/files/img-7.jpg?v=1613729012&width=750");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +15,7 @@
   min-height: 450px;
 }
 .mid-div {
-  background-image: url("https://wp.xpeedstudio.com/charitious/wp-content/uploads/2018/11/banner_img1.jpg");
+  background-image: url("https://medi.arenacommerce.com/cdn/shop/files/home1-banner-11_1208x.png?v=1613557313");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,7 +24,7 @@
 }
 
 .mid-div2 {
-  background-image: url("https://themewagon.github.io/hexashop/assets/images/baner-right-image-04.jpg");
+  background-image: url("https://medi.arenacommerce.com/cdn/shop/files/home2-banner-4_360x.png?v=1613575475");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
