product category making done

--- a/src/components/for home page/top brands/style.css
+++ b/src/components/for home page/top brands/style.css
@@ -7,7 +7,7 @@
   min-height: 450px;
 }
 .top-category-2{
-  background-image: url("https://meds-theme.myshopify.com/cdn/shop/files/img-7.jpg?v=1613729012&width=750");
+  background-image: url("https://meds-theme.myshopify.com/cdn/shop/files/slider_ed1600d0-1473-441d-a299-8ccd9aab35a4.jpg?v=1613733092");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
